[package]
name = "maelstrom-raft"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"

[[bin]]
name = "raft"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
derive_more = "0.99.17"
log = { version = "0.4.17" }
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
simple_logger = { version = "4.1.0", features = ["stderr"] }
thiserror = "1.0.40"
